Trabajando en controllers, servicios y mappersm, entre otras cosas.
